# avw

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: WindsurfOnlyApp.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_switch.rs  http_client.rs  main.rs  windsurf.rs
src/components/: WindsurfAccountCard.vue  WindsurfAccountList.vue  WindsurfAnalyticsDialog.vue  WindsurfTargetDialog.vue
src/composables/: useEscToClose.js  windsurfAutoSwitch.js  windsurfTarget.js
src/locales/: en-US.js  zh-CN.js
