[package]
name = "AVW"
version = "1.5.6"
description = "Windsurf Manager - 用于管理 Windsurf 账号、Credits 与使用数据分析的桌面应用"
authors = ["liubao-cn"]
license = "MIT"
repository = "https://github.com/liubao-cn/avw"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.11"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
